--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,196 @@ a {
     color: var(--main-bg-color)
 }
 
-/****** Hebergements And Populaires ***********/
+* {
+    margin: 0;
+}
+
+/****** Entete *****/
+header {
+    width: 1440px;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1440px;
+    height: 79px;
+}
+
+.list {
+    display: flex;
+    gap: 68px;
+    list-style: none;
+    width: 344px;
+    height: 35px;
+    left: 1096px;
+    padding: 0px, 50px, 0px, 50px;
+    
+}
+
+.list-entete {
+    padding-top: 15px;
+
+}
+
+.list-entete:hover {
+    text-decoration: overline #0065FC;
+    color: #0065FC;
+    
+
+}
+
+.lien-icone{
+    width: 161px;
+    height: 79px;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    
+}
+
+.imgbooki {
+    width: 61px;
+    height: 19px;
+}
+
+/****** Headline ******/
+.info {
+    gap: 35px;
+    width: fill;
+    height: 281px;
+    padding-top: 30px;
+}
+
+.headline {
+    width: fill;
+    height: 53px;
+    gap: 8px;    
+}
+/***** Seach Bar ****/
+.search-bar {
+    width: 377px;
+    height: 49px;
+    border-radius: 15px;
+    border: 1px;
+    color: #FFFFFF;
+    gap: 24px;
+    margin-top: 35px;
+}
+form {
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    width: 377px;
+    height: 49px;
+    border: 1px;
+}
+
+.localisation {
+    width: 50px;
+    height: 49px;
+    align-items: center;
+    display: flex;
+    align-content: center;
+    border: 1px solid #F2F2F2;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 15px;
+}
+
+.fa-location-dot {  
+   width: 14px;
+   height: 18px;
+   top: 15px;
+   left: 18px;
+   color: #000000;
+   margin: 18px;
+   
+}
+
+input {
+    border: none;
+}
+
+::placeholder {
+    size: 18px;
+    font-weight: 700;
+    width: 147px;
+    height: 21px;
+    text-align: center;
+}
+
+input[type='submit'] {
+    background-color: #0065FC;
+    color: #FFFFFF;
+    text-align: center;
+    size: 18px;
+    line-height: 21.13px;
+    gap: 10px;
+    width: 132px;
+    height: 49px;
+    border: 1px solid #0065FC;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 0px;    
+}
+
+/***** Filtres *****/
+.filtres {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    width: 758px;
+    height: 50px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+.FiltresTextIcone {
+    border: 2px solid #d9d9d9;
+    border-radius: 25px;
+    padding-left: 10px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+}
+
+.FiltresTextIcone:hover{
+    background-color: #DEEBFF;
+}
+
+.text {
+    padding-right: 19px;
+    padding-bottom: 4px;
+    padding-left: 10px;
+    height: 20px;
+}
+
+/***** info bar ****/
+.info-bar {
+    display: flex;
+    gap: 10px;
+    height: 24px;
+}
+.fa-info {
+    border: 1px solid #d9d9d9;
+    height: 24px;
+    width: 24px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border-radius: 50%;
+}
+.info-bar-text {
+    display: flex;
+    align-items: center;
+}
+    /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
@@ -74,6 +263,35 @@ a {
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
+}
+
+.colone1  {
+    display: flex;
+    margin-top: 30px;
+    justify-content: space-between;
+}
+
+.colone2 {
+    display: flex;
+    margin-top: 30px;
+    justify-content: space-between;
+}
+
+.hebergements-cards img {
+    width: 250px;
+    height: 124px;
+    gap: 4px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border: 5px #FFFFFF;
+}
+
+.hebergements-cards .card ::content{
+    padding-top: 0px;
+    padding-right: 15px;
+    padding-bottom: 0px;
+    padding-left: 15px;
+    gap: 8px;
 }
 
 /****** Populaires ***********/
