--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /****** General ***********/
+
 * {
     font-family: 'Raleway', sans-serif;
 }
@@ -75,6 +76,7 @@ nav {
     height: 79px;
 }
 
+
 .list {
     display: flex;
     gap: 68px;
@@ -82,17 +84,22 @@ nav {
     width: 344px;
     height: 35px;
     left: 1096px;
-    padding: 0px, 50px, 0px, 50px;
-    
+    padding-top: 0px;
+    padding-right: 50px;
+    padding-bottom: 0px;
+    padding-left: 50px;
 }
 
-.list-entete {
+.list-entete  a {
     padding-top: 15px;
+    display: block;
 
 }
 
-.list-entete:hover {
-    text-decoration: overline #0065FC;
+.list-entete:hover , 
+.list-entete.active {
+     /*** border-top: 2px solid #0065FC;***/
+    box-shadow: inset 0px 2px 0px 0px rgba(0,101,252,1);
     color: #0065FC;
     
 
@@ -115,13 +122,11 @@ nav {
 /****** Headline ******/
 .info {
     gap: 35px;
-    width: fill;
     height: 281px;
     padding-top: 30px;
 }
 
 .headline {
-    width: fill;
     height: 53px;
     gap: 8px;    
 }
@@ -156,6 +161,7 @@ form {
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 15px;
+    box-sizing: border-box;
 }
 
 .fa-location-dot {  
@@ -172,20 +178,23 @@ input {
     border: none;
 }
 
+
 ::placeholder {
-    size: 18px;
+    font-size: 18px;
     font-weight: 700;
     width: 147px;
     height: 21px;
     text-align: center;
+    color: #000
 }
 
 input[type='submit'] {
     background-color: #0065FC;
     color: #FFFFFF;
     text-align: center;
-    size: 18px;
+    font-size: 18px;
     line-height: 21.13px;
+    font-weight: 700;
     gap: 10px;
     width: 132px;
     height: 49px;
@@ -219,6 +228,7 @@ input[type='submit'] {
 
 .FiltresTextIcone:hover{
     background-color: #DEEBFF;
+    cursor: pointer;
 }
 
 .text {
@@ -265,18 +275,21 @@ input[type='submit'] {
     width: 65%;
 }
 
-.colone1  {
+.hebergements-cards {
     display: flex;
-    margin-top: 30px;
-    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.hebergements-cards a {
+    display: flex;
+    flex-wrap: wrap;
+    width: 33%;
+    margin-bottom: 30px;
 }
 
-.colone2 {
-    display: flex;
-    margin-top: 30px;
-    justify-content: space-between;
+.Afficher-plus{
+    font-size: 18px;
+    font-weight: 700;
 }
-
 .hebergements-cards img {
     width: 250px;
     height: 124px;
@@ -285,13 +298,18 @@ input[type='submit'] {
     border-top-right-radius: 20px;
     border: 5px #FFFFFF;
 }
+.hebergements-title {
+    width: 811px;
+    height: 26px;
+    margin-bottom: 30px;
+}
 
-.hebergements-cards .card ::content{
+.card-text {
     padding-top: 0px;
     padding-right: 15px;
     padding-bottom: 0px;
     padding-left: 15px;
-    gap: 8px;
+    height: 64px;
 }
 
 /****** Populaires ***********/
@@ -338,8 +356,73 @@ input[type='submit'] {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
+ /**** Activités ****/
+.Activites {  
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 
+.Activites-title {
+    padding-left: 30px;
+}
+.Activites-card {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    padding-left: 30px;
+}
+.Activites-card img {
+    width: 100%;
+    height: 400px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.Activites-card a {
+    width: 25%;
+}
+.Activites-card .card-content {
+    height: 50px;
+    gap: 10px;
+    color: #FFFFFF;
+}
+.Activites-card .card-title {
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 20px;
+    padding-right: 19px;
+    padding-bottom: 20px;
+    padding-left: 19px;
+}
+.Activites-card .card-title {
+    color: #000;
+}
+/***** Footer *****/
+footer {
+    display: flex;
+    height: 160px;
+    justify-content: space-between;  
+}
 
+footer > * {
+    flex-basis: 33%;
+    
+}
+
+.list-footer  {
+    list-style: none;
+    height: 100%;
+}
+
+.list-footer h3 {
+    padding-top: 20px;
+    padding-bottom: 15px;
+}
+.list-footer li {
+    padding-bottom: 15px;
+}
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
