--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,9 @@ button {
     display: flex;
     position: relative;
 }
+button:hover {
+    cursor: pointer;
+}
 
 .search {
     align-self: center;
@@ -290,6 +293,11 @@ button {
     font-size: 18px;
     font-weight: 700;
 }
+
+.show-more:hover {
+    cursor: pointer;
+}
+
 .hebergements-cards img {
     width: 100%;
     height: 124px;
