form en format mobile

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ button:hover {
     cursor: pointer;
 }
 
-.search {
+.search-button {
     align-self: center;
     padding-left: 16px;
     padding-right: 16px;  
@@ -473,13 +473,13 @@ footer > * {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {  /*max 767.98 avant j'ai modifier */
+@media (max-width: 767.98px) { 
    /*general */
     .main-container{
         padding: 0;
-    }
-    body {
-        width: 100%;
+        max-width: 768px;
+        min-width: 320px;
+        margin: 0 auto;
     }
     main {
         padding: 0 20px;
@@ -512,8 +512,13 @@ footer > * {
     }
 
     /* Info bar */
-   
-    .search {
+    form {
+        display: flex;
+        height: 50px;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .search-button {
         visibility: hidden;
     }
     .icone-search {
@@ -539,16 +544,15 @@ footer > * {
     
     /* Filtres */
    .filtres-text-icone {
-    width: 42%;
-    justify-content: flex-start;
-   }
+        width: 42%;
+        justify-content: flex-start;
+    }
    .text {
-    padding-right: 0px;
-   }
+        padding-right: 0px;
+    }
    .category {
-    flex-wrap: wrap;
-}
-   
+        flex-wrap: wrap;
+    }
    
    /*Hebergements et populaires */
    .hebergements-and-populaires{
@@ -590,3 +594,4 @@ footer > * {
     flex-direction: column;
    }
 }
+
