--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ form {
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 15px;
     box-sizing: border-box;
+    background-color: #F2F2F2;
 }
 
 .fa-location-dot {  
