--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
-    --backcolor-hebergements: #ffff;
+    --white: #ffff;
 }
 
 .fa-solid {
@@ -39,7 +39,7 @@ a {
 }
 
 .card {
-    background-color: white;
+    background-color: var(--white);
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
@@ -95,7 +95,7 @@ nav {
 .list-entete.active {
      /*** border-top: 2px solid #0065FC;***/
     box-shadow: inset 0px 2px 0px 0px rgba(0,101,252,1);
-    color: #0065FC;
+    color: var(--main-color);
     
 
 }
@@ -125,7 +125,7 @@ nav {
 .search-bar {
     border-radius: 15px;
     border: 1px;
-    color: #FFFFFF;
+    color: var(--white);
     margin-top: 35px;
 }
 form {
@@ -140,13 +140,13 @@ form {
     align-items: center;
     display: flex;
     align-content: center;
-    border: 1px solid #F2F2F2;
+    border: 1px solid var(--main-bg-color);
     border-top-left-radius: 15px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 15px;
     box-sizing: border-box;
-    background-color: #F2F2F2;
+    background-color: var(--main-bg-color);
 }
 
 .fa-location-dot {  
@@ -171,11 +171,11 @@ input[type="search"] {
 }
 
 button {
-    background-color: #0065FC;
-    color: #FFFFFF;
+    background-color: var(--main-color);
+    color: var(--white);
     font-size: 18px;
     font-weight: 700;
-    border: 1px solid #0065FC;
+    border: 1px solid var(--main-color);
     border-top-left-radius: 0px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -220,7 +220,7 @@ button:hover {
 }
 
 .filtres-text-icone:hover{
-    background-color: #DEEBFF;
+    background-color: var(--filter-bg-color);
     cursor: pointer;
 }
   /* Tailles Icone */
@@ -235,7 +235,7 @@ button:hover {
 .category {
     display: flex;
     align-items: center;
-    gap: 15px;
+    column-gap: 15px;
 }
 /***** info bar ****/
 .info-bar {
@@ -304,7 +304,7 @@ button:hover {
     height: 124px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    border: 5px #FFFFFF;
+    border: 5px var(--white);
 }
 .hebergements-title {
     margin-bottom: 30px;
@@ -362,31 +362,31 @@ button:hover {
     margin-bottom: 5px;
 }
  /**** Activités ****/
-.Activites {  
+.activites {  
     margin-top: 35px;
     margin-bottom: 35px;
     padding: 30px;
 }
 
-.Activites-title {
+.activites-title {
     padding-bottom: 30px;
 }
-.Activites-card {
+.activites-card {
     display: flex;
     justify-content: space-between;
     gap: 30px;
 }
-.Activites-card img {
+.activites-card img {
     width: 100%;
     height: 400px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
-.Activites-card a {
+.activites-card a {
     width: 23%;
 }
-.Activites-card .card-content {
-    color: #FFFFFF;
+.activites-card .card-content {
+    color: var(--white);
     font-size: 18px;
     font-weight: 700;
     padding-top: 20px;
@@ -395,13 +395,13 @@ button:hover {
     padding-bottom: 20px;
 }
 
-.Activites-card .card-title {
+.activites-card .card-title {
     color: #000;
 }
 /***** Footer *****/
 footer {
     display: flex;
-    background-color: #F2F2F2;
+    background-color: var(--main-bg-color);
     justify-content: space-between;  
 }
 
@@ -463,14 +463,11 @@ footer > * {
     .filtres {
         display: block;
     }
-    .filtres-text-icone{
-        margin-top: 20px;
-    }
     .text {
         font-size: 16px;
     }
     /* Activites media queries */
-    .Activites-card img {
+    .activites-card img {
         height: 200px;
     }
     
@@ -512,11 +509,11 @@ footer > * {
     .list-entete {
         width: 50%;
         text-align: center;
-        box-shadow: inset 0px -2px 0px 0px #F2F2F2; 
+        box-shadow: inset 0px -2px 0px 0px var(--main-bg-color); 
     }
 
     /* Info bar */
-    form {
+    .form {
         display: flex;
         height: 50px;
         flex-direction: row;
@@ -532,7 +529,7 @@ footer > * {
         transform: translate(-50%,-50%); /* Position relative grace au top et left */
     }
    .fa-magnifying-glass {
-        color: #FFFFFF;
+        color: var(--white);
         
     }   
     button {
@@ -541,6 +538,7 @@ footer > * {
         /* test mais marche pas en desous width: 9%; */ 
         width: 49px;
         height: 49px;
+        display: inline-block;
     }
     input[type="search"] {
         min-width: 60%;    /* check pour les details entre  375 et 668 */
@@ -558,9 +556,9 @@ footer > * {
     }
    .category {
         flex-wrap: wrap;
-        gap: 0px;
-        justify-content: space-between
-        ;
+        justify-content: space-between;
+        column-gap: 10px;
+        row-gap: 20px;
     }
    
    /*Hebergements et populaires */
@@ -585,19 +583,19 @@ footer > * {
     width: 100%;
    }
    section.hebergements {
-    background-color: var(--backcolor-hebergements);
+    background-color: var(--white);
    }
 
    /* Activites */
-   .Activites {
+   .activites {
     padding: 20px;
    }
    
-   .Activites-card {
+   .activites-card {
     flex-direction: column;
     gap: 15px;
    }
-   .Activites-card a {
+   .activites-card a {
     width: 100%;
    }
 
